# Space_Dust_Synthesizer

./: .gitignore  CMakeLists.txt  LICENSE  MAC_BUILD.md  QA-README.md  README.md  Untitled  build-and-launch-fl-with-logging.ps1  build-and-launch-with-logging.ps1  build-and-launch.ps1  disable-all-logging-for-release.ps1  download-pluginval.ps1  enable-safety-logging.ps1  juce_path.local.example  launch-ableton.ps1  package-installer.ps1  package-macos.sh  qa-runtime-monitor.ps1  run-full-qa.ps1  run-pluginval.ps1  test-installer.ps1
.cursor/rules/: auto-build.mdc
.github/workflows/: qa.yml
Source/: CheezeGuyGame.h  FinalEQComponent.cpp  FinalEQComponent.h  Goniometer.cpp  Goniometer.h  MemorySafetyLogger.cpp  MemorySafetyLogger.h  NonlinearSVF.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  OversampledStage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  RetargetableADSR.h  SexiconReverb.cpp  SexiconReverb.h  SpaceDustBitCrusher.cpp  SpaceDustBitCrusher.h  SpaceDustCompressor.cpp  SpaceDustCompressor.h  SpaceDustFinalEQ.cpp  SpaceDustFinalEQ.h  SpaceDustFlanger.cpp  SpaceDustFlanger.h  SpaceDustGrainDelay.cpp  SpaceDustGrainDelay.h  SpaceDustLofi.cpp  SpaceDustLofi.h  SpaceDustLookAndFeel.cpp  SpaceDustLookAndFeel.h  SpaceDustParametricEQ.cpp  SpaceDustParametricEQ.h  SpaceDustPhaser.cpp  SpaceDustPhaser.h  SpaceDustReverb.cpp  SpaceDustReverb.h  (+17 more)
build-verify/clean-test-kit/: run-clean-test.ps1
docs/: FIX_SUMMARY.md  REVERB_RESEARCH.md
installer/: SpaceDust-Setup.iss  THIRD-PARTY-NOTICES.txt  trusted-signing.json.example
installer/Files/Presets/: 808 Da Juice.sdpreset  Acid Beach.sdpreset  All the Things She Didn't Say.sdpreset  Bang Yoy.sdpreset  Blow Key Degraded.sdpreset  Blow Key.sdpreset  Bow Bow Baw.sdpreset  Bubble Gum.sdpreset  Bubble Key.sdpreset  Classic Yoy.sdpreset  Crunch Bus.sdpreset  Crunchy as Hell 2.sdpreset  Crunchy as Hell.sdpreset  DNB Attitude.sdpreset  Dew Doo Doo Bass.sdpreset  Dub Mew Bass.sdpreset  Event Horizon - Nailsonchalkboard.sdpreset  Fax Machine Bass.sdpreset  G Organ.sdpreset  Initial D.sdpreset  Lights Go In.sdpreset  Long Boi.sdpreset  Long Square.sdpreset  Low Skanka Bass.sdpreset  Major Blue.sdpreset  Major Rave.sdpreset  Mesonance.sdpreset  Minor Blue.sdpreset  Minor Rave Stab in the Heart.sdpreset  Old School Dubstepp.sdpreset  Pad Floatsome.sdpreset  Pluk Key.sdpreset  Prog Synth.sdpreset  README.md  Roboto.sdpreset  Saw Digital.sdpreset  Simple Seventh Saw Bass.sdpreset  Simple White Noize.sdpreset  Sleepy Bells.sdpreset  Slow P.sdpreset  (+13 more)
installer/Support/: README-Presets.txt
installer/macos/: Distribution.xml  README.md  uninstall.sh
installer/macos/scripts/: postinstall  preinstall
patches/: README.md  apply-juce-keyboard-focus-patch.ps1  apply-juce-mpe-patch.ps1  apply-juce-mpe-patch.py
scripts/: gate-debug-logs.py
tools/stress/: stress_main.cpp
tools/transienttest/: transient_test_main.cpp
tools/vst3host/: vst3host_main.cpp
